--- a/client/src/App.css
+++ b/client/src/App.css
@@ -69,6 +69,10 @@ form {
   margin-right: 35%;
  margin-left: 43%;
 margin-top: 100px;
+}
 
-  
+button {
+float: right;
+margin-right: 43%;
+opacity: 0.8;
 }
