--- a/client/src/App.css
+++ b/client/src/App.css
@@ -67,8 +67,9 @@ h1 {
 
 form { 
   margin-right: 35%;
- margin-left: 43%;
+ margin-left: 33%;
 margin-top: 100px;
+min-width: 300px;
 }
 
 button {
