--- a/client/src/App.css
+++ b/client/src/App.css
@@ -87,10 +87,10 @@ img {
 .card {
 
   border-radius: 2px;
-  height: 300px;
+  height: 325px;
   margin: 1rem;
   position: relative;
-  width: 300px;
+  width: 325px;
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
   text-align: left;
 }
@@ -100,15 +100,7 @@ img {
   min-height: 150px;
   min-width: 150px;
 }
-/* .card > .img-container {
-  height: 60%;
-  overflow: hidden;
-  text-align: center;
-  background:#6CADDC;
-}
-.card > .img-container > img {
-  width: 60%
-} */
+
 
 .card > .content {
   padding-left: 1rem;
@@ -135,4 +127,8 @@ img {
 
 .card > .remove:hover {
   color: #d50000;
+}
+
+li {
+  font-size: 11px;
 }
