--- a/client/src/App.css
+++ b/client/src/App.css
@@ -87,7 +87,7 @@ img {
 .card {
 
   border-radius: 2px;
-  height: 325px;
+  height: 300px;
   margin: 1rem;
   position: relative;
   width: 325px;
@@ -95,10 +95,11 @@ img {
   text-align: left;
 }
 img {
-  max-height: 150px;
-  max-width: 150px;
-  min-height: 150px;
-  min-width: 150px;
+  max-height: 120px;
+  max-width: 120px;
+  min-height: 120px;
+  min-width: 120px;
+  margin: 3%;
 }
 
 
