--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,12 +27,15 @@ h1 {
   opacity: 0.89;
   color: whitesmoke;
   border-radius: 2px;
-  height: 300px;
+  height: flex;
   margin: 1rem;
+  margin-left: 2.5rem;
   position: relative;
-  width: 325px;
+  min-width: 27%;
+  max-width: 275px;
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
   text-align: left;
+  line-height: 0.80rem;
 }
 
 /* .card-results {
@@ -80,8 +83,8 @@ min-width: 300px;
 }
 
 button {
-/* 
-margin-left: -23%; */
+margin-left: 43%;
+/* margin-left: 23%; */
 opacity: 0.8;
 }
 
@@ -109,9 +112,10 @@ img {
 }
 
 .card > .remove {
+  margin-left: 100%;
   color: #ff1744;
   font-size: 38px;
-  position: absolute;
+  position: relative;
   top: -20px;
   right: 50px;
   cursor: pointer;
@@ -123,4 +127,7 @@ img {
 
 li {
   font-size: 11px;
+}
+.row {
+  margin: 3%;
 }
